# Engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
external_libraries/glad/: CMakeLists.txt
external_libraries/glad/include/glad/: glad.h
external_libraries/glad/src/: glad.c
game/: Events.cpp  Events.h  Game.cpp  Game.h  ILoop.cpp  ILoop.h
graphics/: Camera.cpp  Camera.h  SKStruct.h  Shader.h  Sprite.h  Texture.h
graphics/Camera/: OrthoCamera.cpp  OrthoCamera.h  PerspCamera.cpp  PerspCamera.h
graphics/Render/: Render.h
res/: fragment.glsl  vertex.glsl
support/: ResourcesManager.cpp  ResourcesManager.h  glError.h
